# GymMini

backend/: .gitignore  CMakeLists.txt  config.json  main.cc
backend/controllers/: Generic.cc  Generic.h
backend/models/: Endurance.cc  Endurance.h  Strength.cc  Strength.h  model.json
backend/setup/: db_entry.sh  db_setup.sql  export.sh
backend/setup/data/: endurance.csv  exs.csv
backend/utils/: utils.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/app/: app.jsx  styles.jsx
frontend/src/components/: components.jsx
frontend/src/customhooks/: hooks.jsx
frontend/src/generic/: components.jsx  generic.jsx  styles.jsx
setup/: custom.service  db_entry.sh  export.sh  nginx.conf  setup.sh
setup/data/: strength.csv
